--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--开屏界面-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -11,7 +12,7 @@
 
     <TextView
         android:text="记账本"
-        android:typeface="sans"
+        android:typeface="serif"
         android:textSize="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
